vlib/v/checker/tests/module_syntax_err.out
vlib/v/checker/tests/module_syntax_err.vv:1:12: error: `module x` syntax error
    1 | module main.os
      |            ^
    2 | fn main() {
    3 |     println('hello, world')
